Revert "Fix link color contrast issues"
This reverts commit b9f9478ce036700021008db49d945112fe69440d.

--- a/static/themes/default/css/site.css
+++ b/static/themes/default/css/site.css
@@ -9,12 +9,6 @@ a:hover {
   color: #fff;
 }
 
-.bandana a,
-.bandana a:focus,
-.bandana a:hover {
-  color: #27ae60;
-}
-
 /* Custom default button */
 .btn-default,
 .btn-default:hover,
